<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MineGuard.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_md"
    android:layout_marginVertical="@dimen/margin_sm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_lg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="@dimen/margin_md">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarm_trends"
                style="@style/TextAppearance.MineGuard.Subtitle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/time_span_background"
                android:padding="@dimen/padding_xs">

                <TextView
                    android:id="@+id/tv_time_one_hour"
                    style="@style/Widget.MineGuard.TimeSpanChip.Selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_one_hour" />

                <TextView
                    android:id="@+id/tv_time_one_week"
                    style="@style/Widget.MineGuard.TimeSpanChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_one_week" />

                <TextView
                    android:id="@+id/tv_time_one_month"
                    style="@style/Widget.MineGuard.TimeSpanChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_one_month" />

                <TextView
                    android:id="@+id/tv_time_one_year"
                    style="@style/Widget.MineGuard.TimeSpanChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_one_year" />

            </LinearLayout>

        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_alarm_trends"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
